# Scrappy

./: .gitignore  .gitmodules  README.md
client/: LICENSE
client/Scrap_Generators/: Can_Generator.json  Cup_Generator.json  (+30 more)
server/matryoshka/: CMakeLists.txt  matryoshka.cpp  matryoshkaModular.cpp  maximize_nesting_scale.cpp  method.md  modeler.cpp  profile.cpp  todo.md
server/matryoshka/cmake/: FindLIBIGL.cmake
server/matryoshka/examples/: key.objg
server/matryoshka/examples/30/: cartoon-elephant.ply  frog_reg.off  hound.off
server/matryoshka/examples/40/: homer.ply  top-heavy-man.off
server/matryoshka/examples/50/: bimba.ply  spoonrider_yoda.stl  testa_semp.stl
server/matryoshka/examples/60/: COLONEL_72k_v2.stl  bunny.ply  hippo.ply  menouFinal2.stl  totoro.off
server/matryoshka/examples/80/: igea.ply
server/matryoshka/examples/90/: Skull_s.stl
server/matryoshka/examples/busts/: Nefertiti-decimated.ply
server/matryoshka/examples/turducken/: chicken-decimated.ply  duck.ply  turkey.ply
server/matryoshka/include/igl/copyleft/: offset_surface.cpp
server/matryoshka/include/igl/copyleft/cgal/: is_valid_nesting.cpp  is_valid_nesting.h  matryoshka.cpp  matryoshka.h
server/matryoshka/include/igl/opengl/: draw_nesting_depth_layer.cpp  draw_nesting_depth_layer.h  is_valid_nesting.cpp  is_valid_nesting.h  maximize_nesting_scale.cpp  maximize_nesting_scale.h  prepare_nesting.cpp  prepare_nesting.h  vertex_array.h
server/matryoshka/matlab/: A.ply  B.ply  C_failure.m  boomerang.m  bunny.m  colonel.m  compile.m  find_max_scale.m  gargoyle_ball_print.m  gargoyle_ball_transformations.m  karl.m  lineSegmentIntersect.m  mB.ply  maltese.m  matryoshka.cpp  matryoshka_matlab.m  matryoshka_video.m  menou.m  nefertiti.m  skull.m  skull_print.m  skull_transformations.m  spider.m  test_intersect.m  test_landscape.m  test_particleswarm.m  trump_putin.m  turducken.m
server/matryoshka/test/: glContext.cpp  glContext.hpp
(+148 files in other folders)
